2016-10-05  Mark Ellis  <mark@mpellis.org.uk>

	* update deprecated Glib and Gtk items
	* GtkStatusIcon is deprecated, if AppIndicator is available then
	  do not build with GtkStatusIcon

2013-07-25  Mark Ellis  <mark@mpellis.org.uk>

	* 0.17 release

2012-08-02  Mark Ellis  <mark@mpellis.org.uk>

	* remove obsolete hal code

2012-05-29  Mark Ellis  <mark@mpellis.org.uk>

	* 0.16 release

2011-11-19  Mark Ellis  <mark@mpellis.org.uk>

	* add libappindicator support, required some reworking of
	  the menus for passworded devices
	* require gtk >= 2.16

2011-11-18  Mark Ellis  <mark@mpellis.org.uk>

	* librapi2 has been merged into libsynce in synce-core, drop
	  separate build dependency on it

2011-11-05  Mark Ellis  <mark@mpellis.org.uk>

	* make the GtkStatusIcon a child of SynceTrayicon, rather than
	  trayicon being a subclass of statusicon, which is inflexible
	* fix build with recent libnotify (>= 0.7), which has no
	  support for attaching to widgets
	* remove obsolete libgnome items, replace deprecated functions

2011-03-01  Mark Ellis  <mark@mpellis.org.uk>

	* add configure options to allow disabling of dccm backends;
	  only udev based backend is enabled by default

2011-02-12  Mark Ellis  <mark@mpellis.org.uk>

	* 0.15.1 release

2010-08-31  Mark Ellis  <mark@mpellis.org.uk>

	* monitor connections from udev based dccm

2010-04-26  Mark Ellis  <mark@mpellis.org.uk>

	* 0.15 release

2009-12-02  Mark Ellis  <mark@mpellis.org.uk>

	* change the glade file so it doesn't unnecessarily depend on
	  a gtk version higher than 2.12

2009-11-09  Mark Ellis  <mark@mpellis.org.uk>

	* add libxml compile flags

2009-07-18  Mark Ellis  <mark@mpellis.org.uk>

	* add compatibility with earlier gtk2 (2.12)

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-06-03  Mark Ellis <mark@mpellis.org.uk>

	* moved from libglade to gtkbuilder
	* show icon if passworded device present

2009-04-28  Mark Ellis <mark@mpellis.org.uk>
