@@ -1,3 +1,8 @@
+2016-10-10  Mark Ellis  <mark@mpellis.org.uk>
+
+	* use libsecret if available, replacing the deprecated
+	  gnome-keyring
+
 2016-10-05  Mark Ellis  <mark@mpellis.org.uk>
 
 	* update deprecated Glib and Gtk items
